# orqentis-app

./: LICENSE  index.html  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: arm.rs  auth.rs  commands.rs  foundry.rs  lib.rs  local.rs  m365.rs  studio.rs
src/lib/components/: AgentsPage.svelte  ChatPage.svelte  CommandPalette.svelte  ConnectionsPage.svelte  CostsPage.svelte  HomePage.svelte  KnowledgePage.svelte  MarkdownRenderer.svelte  ModelsPage.svelte  RunsPage.svelte  Sidebar.svelte  ToolsPage.svelte  TrustPage.svelte
src/lib/services/: api.ts  db.ts  notifications.ts
src/lib/stores/: auth.ts  data.ts  navigation.ts
src/lib/types/: index.ts
