[package]
name = "orqentis"
version = "0.1.0"
description = "Unified agent control plane for Microsoft AI"
authors = ["MJ Peña"]
license = "MIT"
repository = "https://github.com/mjtpena/orqentis-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2.4.1"
